# marimo-prompt-library

./: .env.sample  .gitignore  README.md  adhoc_prompting.py  is_marimo_awesome.py  marimo_awesome.py  marimo_is_awesome_demo.py  multi_language_model_ranker.py  multi_llm_prompting.py  prompt_library.py  pyproject.toml
AI_DOCS/: marimo_cheatsheet.md  marimo_compressed.md  marimo_documentation.json
language_model_rankings/: llama.json  rankings.json
layouts/: adhoc_prompting.grid.json  multi_language_model_ranker.grid.json  multi_llm_prompting.grid.json  prompt_library.grid.json
prompt_library/: ai-coding-meta-review.xml  bullet-knowledge-compression.xml  chapter-gen.xml  hn-sentiment-analysis.xml  title-theme-bullet-knowledge-compression.xml
src/marimo_notebook/: __init__.py
testable_prompts/bash_commands/: command_generation_1.md  command_generation_2.md  command_generation_3.md
testable_prompts/basics/: hello.md  mult_lang_counting.xml  python_count_to_ten.xml
testable_prompts/code_debugging/: code_debugging_1.md  code_debugging_2.md  code_debugging_3.md
testable_prompts/code_explanation/: code_explanation_1.md  code_explanation_2.md  code_explanation_3.md
testable_prompts/code_generation/: code_generation_1.md  code_generation_2.md  code_generation_3.md  code_generation_4.md
testable_prompts/context_window/: context_window_1.md  context_window_2.md
testable_prompts/email_management/: email_management_1.md  email_management_2.md  email_management_3.md  email_management_4.md  email_management_5.md  email_management_6.md
(+18 files in other folders)
