[project]
name = "marimo-notebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.47.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
    "llm>=0.16",
    "pytest>=8.3.3",
    "llm-gemini>=0.1a4",
    "llm-claude>=0.4.0",
    "mako>=1.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
