[project]
name = "marimo-notebook"
version = "0.1.0"
description = "Starter codebase to use Marimo reactive notebooks to build a reusable, customizable, Prompt Library."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.47.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
    "llm>=0.16",
    "pytest>=8.3.3",
    "llm-claude>=0.4.0",
    "mako>=1.3.5",
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "altair>=5.4.1",
    "vega-datasets>=0.9.0",
    "tornado>=6.4.1",
    "llm-claude-3>=0.4.1",
    "marimo>=0.8.18",
    "llm-ollama>=0.5.0",
    "pyperclip>=1.9.0",
    "llm-gemini>=0.1a5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
